<resources>
    <string name="app_name">Weather_Qualcomm</string>
    <string name="action_settings">Settings</string>
    <string name="helloworld">Hello World!</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="weather_title">Weather - Qualcomm</string>
    <string name="ambient_temperature">Temperature</string>
    <string name="converttof">To Fahrenheit</string>
</resources>
